// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputActor Snapshots > initial state > renders empty input 1`] = `
"
      <div class="input-files" style="display: none;"></div>
      <div class="input-wrapper">
        <textarea class="input-textarea" placeholder="Type a message..." rows="1"></textarea>
        <button class="input-submit" type="button">Send</button>
      </div>
    "
`;

exports[`InputActor Snapshots > injected styles > injects styles into document head 1`] = `
"
/**
 * Input area styles
 * User input textarea and submit button
 */

.input-container {
  display: flex;
  flex-direction: column;
  gap: 8px;
  padding: 12px;
  background: var(--vscode-input-background, #3c3c3c);
  border-top: 1px solid var(--vscode-panel-border, #454545);
}

.input-wrapper {
  display: flex;
  gap: 8px;
  align-items: flex-end;
}

.input-textarea {
  flex: 1;
  min-height: 40px;
  max-height: 200px;
  padding: 8px 12px;
  font-family: var(--vscode-font-family, system-ui);
  font-size: 13px;
  line-height: 1.5;
  color: var(--vscode-input-foreground, #cccccc);
  background: var(--vscode-input-background, #3c3c3c);
  border: 1px solid var(--vscode-input-border, #6b6b6b);
  border-radius: 4px;
  resize: none;
  overflow-y: auto;
}

.input-textarea:focus {
  outline: none;
  border-color: var(--vscode-focusBorder, #007fd4);
}

.input-textarea:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.input-textarea::placeholder {
  color: var(--vscode-input-placeholderForeground, #8b8b8b);
}

.input-submit {
  padding: 8px 16px;
  font-size: 13px;
  font-weight: 500;
  color: var(--vscode-button-foreground, #ffffff);
  background: var(--vscode-button-background, #0e639c);
  border: none;
  border-radius: 4px;
  cursor: pointer;
  transition: background 0.15s ease;
}

.input-submit:hover:not(:disabled) {
  background: var(--vscode-button-hoverBackground, #1177bb);
}

.input-submit:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.input-submit.submitting {
  position: relative;
}

.input-submit.submitting::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 14px;
  height: 14px;
  margin: -7px 0 0 -7px;
  border: 2px solid transparent;
  border-top-color: currentColor;
  border-radius: 50%;
  animation: input-spinner 0.8s linear infinite;
}

@keyframes input-spinner {
  to {
    transform: rotate(360deg);
  }
}

/* File attachment area */
.input-files {
  display: flex;
  flex-wrap: wrap;
  gap: 6px;
}

.input-file-tag {
  display: inline-flex;
  align-items: center;
  gap: 4px;
  padding: 2px 8px;
  background: var(--vscode-badge-background, #4d4d4d);
  color: var(--vscode-badge-foreground, #ffffff);
  border-radius: 4px;
  font-size: 11px;
}

.input-file-remove {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: 14px;
  height: 14px;
  margin-left: 2px;
  background: none;
  border: none;
  color: inherit;
  opacity: 0.7;
  cursor: pointer;
  border-radius: 2px;
}

.input-file-remove:hover {
  opacity: 1;
  background: rgba(255, 255, 255, 0.1);
}
"
`;

exports[`InputActor Snapshots > with content > renders input with file attachments 1`] = `
"
      <div class="input-files" style="display: flex;">
      <span class="input-file-tag">
        📄 main.ts
        <button class="input-file-remove" data-file="/workspace/src/main.ts" title="Remove">×</button>
      </span>
    
      <span class="input-file-tag">
        📄 package.json
        <button class="input-file-remove" data-file="/workspace/package.json" title="Remove">×</button>
      </span>
    </div>
      <div class="input-wrapper">
        <textarea class="input-textarea" placeholder="Type a message..." rows="1"></textarea>
        <button class="input-submit" type="button">Send</button>
      </div>
    "
`;

exports[`InputActor Snapshots > with content > renders input with value 1`] = `
"
      <div class="input-files" style="display: none;"></div>
      <div class="input-wrapper">
        <textarea class="input-textarea" placeholder="Type a message..." rows="1" style="height: 0px;"></textarea>
        <button class="input-submit" type="button">Send</button>
      </div>
    "
`;

exports[`InputActor Snapshots > with content > renders input with value and files 1`] = `
"
      <div class="input-files" style="display: flex;">
      <span class="input-file-tag">
        📄 utils.ts
        <button class="input-file-remove" data-file="/workspace/src/utils.ts" title="Remove">×</button>
      </span>
    </div>
      <div class="input-wrapper">
        <textarea class="input-textarea" placeholder="Type a message..." rows="1" style="height: 0px;"></textarea>
        <button class="input-submit" type="button">Send</button>
      </div>
    "
`;

exports[`InputActor State Snapshots > captures initial state 1`] = `
{
  "disabled": false,
  "files": [],
  "focused": false,
  "submitting": false,
  "value": "",
}
`;

exports[`InputActor State Snapshots > captures state with files 1`] = `
{
  "disabled": false,
  "files": [
    "/path/to/file.txt",
    "/another/file.js",
  ],
  "focused": false,
  "submitting": false,
  "value": "",
}
`;

exports[`InputActor State Snapshots > captures state with value 1`] = `
{
  "disabled": false,
  "files": [],
  "focused": false,
  "submitting": false,
  "value": "Test message",
}
`;
